Restore focus-state ink drop highlight on buttons after ripple animation finishes.

At first I just copied the way we restore highlight due to hover (i.e.
I triggered StartHighlightAfterRippleTimer() based on ShouldHighlight(),
not is_hovered_), but that looked sluggish and broken in comparison to just
snapping back to the hover state.

BUG=626307,623957

Review-Url: https://codereview.chromium.org/2125223004
Cr-Commit-Position: refs/heads/master@{#407845}

Former-commit-id: efad9e3a50b9ce33582780a860519e40539c3cef